# Wihyeongsu

./: .gitignore  LICENSE.md  README.md  README2.md  components.json  index.css  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  xy-theme.css
homework/10/: wdbc_classification_cv.py
homework/3/: class_score_analysis.md  class_score_analysis.py  test.ipynb
homework/4/: turtle_runaway.md  turtle_runaway.py  turtle_runaway_skeleton.py
homework/5/: class_score_plot.py
homework/6/: class_score_predict.py
homework/7/: multivar_optimization.py
homework/9/: wdbc_classification.py
practice/: covid19_statistics.md  covid19_statistics.py
src/: App.tsx  createNodes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/Anthropic_api/: anthropic.rs  error.rs  headers.rs  message_request.rs  mod.rs  types.rs
src-tauri/src/Anthropic_api/Prompt/: system_prompt.txt
src-tauri/src/api/: anthropic.rs  anthropic_builder.rs  error.rs  headers_builder.rs  message_request.rs  mod.rs  types.rs
src/components/: ActivationDropdownMenu.tsx  AnimatedSubmitButton.tsx  AppSidebar.tsx  BooleanDropdownMenu.tsx  ClimbingBoxLoader.tsx  CodeViewer.tsx  ColorSelectorNode.tsx  ConnectionLine.tsx  CustomNodesFlow.tsx  DataFormatPopover.tsx  DenseLayerNode.tsx  DnDContext.tsx  DownloadButton.tsx  Flow.tsx  FlowWithSidebar.tsx  GenerateCodeDialog.tsx  ImageDisplayButton.tsx  InputLayerNode.tsx  InputNode.tsx  LinearLayerNode.tsx  NodeContextMenu.tsx  NumberPopover.tsx  NumericPopover.tsx  OutputLayerNode.tsx  PaddingDropdownMenu.tsx  PaddingModeDropdownMenu.tsx  ShapePopover.tsx  Sidebar copy.tsx  Sidebar.tsx  SidebarTab.tsx  TextUpdaterNode.tsx  test.tsx  test1.tsx  test2.tsx
src/components/Handles/: ConnectionLimitHandle.tsx  ShapeValidationHandle.tsx
src/components/icons/: github.tsx  (+8 more)
src/hooks/: useClick.tsx  useInput.tsx  useTabs.tsx  useTitle.tsx
src/store/: anthropicResponseStore.ts
src/types/: Activation.types.ts  ConvolutionalLayerNode.types.ts  DataFormat.types.ts  DenseLayerNode.types.ts  InputLayerNode.types.ts  InputNode.types.ts  LinearLayerNode.types.ts  Node.types.ts  NodeTypes.ts  Nodes.types.ts  OutputLayerNode.types.ts  Sidebar.types.tsx
src/utils/: createNodes.ts  exportFlowToJson.ts  fetchAnthropic.ts  flowExporter.ts  generateFlowImage.ts  isNumberNArray.ts  isNumberTuple.ts
(+25 files in other folders)
