[package]
name = "ai-architect"
version = "0.1.0"
description = "[2024-2 Open Source Software Term Project] AI-architect "
authors = ["Wihyeongsu <wibrother2@gmail.com>"]
license = "MIT"
repository = "https://github.com/Wihyeongsu/Wihyeongsu"
edition = "2021"

[package.metadata.windows]
# Windows 특정 메타데이터
company-name = "WiCorp"
product-name = "AI Architect"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_architect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }


[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
thiserror = "2.0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

